Add coverage to pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 secrets
 
+# Coverage
+.coverage
+
+# Pytest cache
+pytest_cache/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
