--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,5 +27,9 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest
+        coverage run -m pytest
+
+    - name: Check coverage
+      run: |
+        coverage report
 
