--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["black", "pytest", "isort", "jsondiff", "coverage"]
+dev = ["black", "pytest", "isort", "jsondiff", "coverage", "pre-commit"]
 
 [build-system]
 requires = ["setuptools"]
