Add test envvars to toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 name = "ecobud-server"
 version = "0.1.0"
 description = "APIs for the ecobud app."
-authors = [
-    {name = "Marco Pistilli", email = "pistilli.mrc@gmail.com"}
-]
+authors = [{ name = "Marco Pistilli", email = "pistilli.mrc@gmail.com" }]
 readme = "README.md"
 dependencies = [
     "flask",
@@ -14,11 +12,19 @@ dependencies = [
     "bcrypt",
     "cachetools",
     "gunicorn",
-    "dacite"
+    "dacite",
 ]
 
 [project.optional-dependencies]
-dev = ["black", "pytest", "isort", "jsondiff", "coverage", "pre-commit"]
+dev = [
+    "black",
+    "pytest",
+    "isort",
+    "jsondiff",
+    "coverage",
+    "pre-commit",
+    "pytest-env",
+]
 
 [build-system]
 requires = ["setuptools"]
@@ -37,3 +43,11 @@ fail_under = 80
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest_env]
+TINK_CLIENT_ID = "tink-client-id"
+TINK_CLIENT_SECRET = "tink-client-secret"
+MONGO_CONNECTION_STRING = "mongo-url"
+SELF_BASE_URL = "self-url"
+FLASK_SECRET_KEY = "flask-secret-key"
+MONGO_DB_NAME = "mongo-db-name"
