--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ source = ["src/ecobud"]
 [tool.coverage.report]
 show_missing = true
 fail_under = 80
+exclude_also = ["__main__"]
 
 [tool.isort]
 profile = "black"
