test utils & imports do not get checked for coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ source = ["src/ecobud"]
 [tool.coverage.report]
 show_missing = true
 fail_under = 80
-exclude_also = ["__main__"]
+exclude_also = ["__main__", 'import']
 
 [tool.isort]
 profile = "black"
