--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install .[dev]
+        python -m pip install -e .[dev]
 
     - name: Run tests
       run: |
